--- a/build.gradle
+++ b/build.gradle
@@ -5,14 +5,21 @@ repositories {
     mavenCentral()
     flatDir { dirs "lib" }
     flatDir { dirs "${vertxHome}/lib/jars" }
+    flatDir { dirs "${vertxHome}/mods/mongo-persistor/lib" }
 }
 
 dependencies {
     groovy 'org.codehaus.groovy:groovy:1.8.6'
 	compile ':fongo'
-    compile ':vert.x-core'
-    testCompile 'org.spockframework:spock-core:0.6-groovy-1.8'
-    runtime ':netty'
+	compile ':mongo'
+	compile ':vert.x-core'
+	compile ':vert.x-platform'
+    compile 'org.spockframework:spock-core:0.6-groovy-1.8'
+	compile files("${vertxHome}/mods/mongo-persistor")
+	runtime ':netty'
+	runtime 'org.mockito:mockito-core:1.9.0'
+	testRuntime ':jackson-core'
+	testRuntime ':jackson-mapper'
 }
 
 sourceCompatibility = '1.7'
