generate reports after casper tests
regular test report fails if casper XML is present

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
-/build
+# machine specific config
 /gradle.properties
-/.gradle
+
+# gradle output
+build
+.gradle
+
+# intellij artifacts
 /*.ipr
 /*.iml
 /*.iws
